--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,5 @@
-body{
-
-    background-color: rgb(141, 141, 146);
-   
-}
-
-header{
-
-    display: inline-block;
-}
-
 .plog{
 
+    color: blanchedalmond;
     width: 20%;
-    border-radius: 50%;
 }
