--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,14 @@ header{
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
 }
+
+#datos{
+
+    font-size: 25px;
+    padding: 10px;
+    border-radius: 25px;
+}
+
+#sobreMi{
+    border-radius: 20px;
+}
