fix: Se agrega seccion de Educacion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,13 @@ header{
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
+    
+}
+
+section{
+
+    background-color: black;
+    width: 10%;
 }
 
 #datos{
@@ -28,6 +35,6 @@ header{
     border-radius: 25px;
 }
 
-#sobreMi{
+#Educacion{
     border-radius: 20px;
 }
